# things3-cloud

./: Cargo.toml  README.md  ROADMAP.md  cli.py  pyproject.toml  rustfmt.toml
.github/workflows/: bump.yml  cut-release.yml  main.yml  nightly.yml  release.yml  tests.yml
src/: app.rs  arg_types.rs  auth.rs  client.rs  cloud_writer.rs  cmd_ctx.rs  common.rs  dirs.rs  lib.rs  log_cache.rs  logging.rs  main.rs  store.rs  things_id.rs  wire.rs  wire_tests.rs
src/commands/: anytime.rs  area.rs  areas.rs  completions.rs  delete.rs  edit.rs  find.rs  inbox.rs  logbook.rs  mark.rs  mod.rs  new.rs  project.rs  projects.rs  reorder.rs  schedule.rs  set_auth.rs  someday.rs  tags.rs  today.rs  upcoming.rs
src/ids/: matching.rs  mod.rs  things_id.rs
src/store/: entities.rs  mod.rs  state.rs
src/ui/: mod.rs  style.rs
src/wire/: area.rs  checklist.rs  mod.rs  notes.rs  recurrence.rs  tags.rs  task.rs  tombstone.rs  wire_object.rs
tests/: cli_trycmd.rs  conftest.py  helpers.py  journal_helper.rs  mutating_fixtures.py  mutating_http_helpers.py  mutations.rs  test_cli_reorder.py  test_cli_schedule.py  test_integration_cmd_anytime.py  test_integration_cmd_area.py  test_integration_cmd_areas.py  test_integration_cmd_delete.py  test_integration_cmd_edit.py  test_integration_cmd_find.py  test_integration_cmd_inbox.py  test_integration_cmd_logbook.py  test_integration_cmd_mark.py  test_integration_cmd_new.py  test_integration_cmd_new_area.py  test_integration_cmd_new_project.py  test_integration_cmd_project.py  test_integration_cmd_projects.py  test_integration_cmd_reorder.py  test_integration_cmd_schedule.py  test_integration_cmd_someday.py  test_integration_cmd_tags.py  test_integration_cmd_today.py  test_integration_cmd_upcoming.py  test_integration_helpers.py  test_store_logbook.py
tests/command/: common.rs
tests/fixtures/: anytime_basic.txt  anytime_detailed.txt  anytime_empty.txt  anytime_filtered.txt  area_all_default.txt  area_all_with_completed.txt  area_detailed.txt  area_header_tags.txt  area_loose_projects.txt  areas_basic_ordering.txt  areas_blank_title_tags.txt  areas_empty.txt  areas_tags.txt  inbox_basic.txt  inbox_detailed.txt  inbox_empty.txt  inbox_scoped_filtered.txt  integration_helpers_inbox.txt  logbook_basic_grouped.txt  logbook_detailed.txt  logbook_empty.txt  logbook_from_filter.txt  logbook_to_filter.txt  project_detailed.txt  project_empty.txt  project_grouped.txt  projects_basic_grouped.txt  projects_detailed.txt  projects_empty.txt  projects_progress_markers.txt  someday_detailed.txt  someday_empty.txt  someday_filtered.txt  someday_mixed_ordering.txt  tags_basic_list.txt  tags_empty.txt  tags_filter_blank_titles.txt  tags_shortcut_rendering.txt  today_basic.txt  today_detailed.txt  (+5 more)
tests/mutations/: common.rs  test_delete.rs  test_mark.rs  test_new.rs  test_reorder.rs  test_schedule.rs
things_cloud/: client.py  store.py
things_cloud/cli/: cmd_anytime.py  cmd_area.py  cmd_areas.py  cmd_delete.py  cmd_edit.py  cmd_find.py  cmd_inbox.py  cmd_logbook.py  cmd_mark.py  cmd_new.py  cmd_project.py  cmd_projects.py  cmd_reorder.py  cmd_schedule.py  cmd_set_auth.py  cmd_someday.py  cmd_tags.py  cmd_today.py  cmd_upcoming.py  common.py
trycmd/: run.sh
trycmd/anytime/: basic_list.trycmd  detailed_with_notes_and_checklist.trycmd  empty.trycmd  filters_someday_future_trashed_and_completed.trycmd  groups_by_area_and_project_with_hiding.trycmd
trycmd/area/: all_includes_completed_tasks_and_projects_0.trycmd  all_includes_completed_tasks_and_projects_1.trycmd  detailed_shows_task_and_project_notes_with_checklist.trycmd  header_shows_tags.trycmd  lists_loose_tasks_and_projects.trycmd
trycmd/areas/: basic_list_orders_by_index.trycmd  (+3 more)
(+308 files in other folders)
