[package]
name = "things-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
crc32fast = "1.5"
dirs = "6.0"
num_enum = "0.7"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
strum = { version = "0.28", features = ["derive"] }
urlencoding = "2.1"
uuid = { version = "1.22", features = ["v4"] }

[dev-dependencies]
insta = "1.46"
tempfile = "3"
