[project]
name = "things-cli"
version = "0.1.0"
description = "Small Things Cloud CLI"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
things3 = "cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["cli.py", "things_cloud/**/*.py"]

[tool.hatch.build.targets.sdist]
include = ["cli.py", "things_cloud/**/*.py", "README.md", "pyproject.toml", "LICENSE"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
